# chinese-ner-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs  main.rs  ner.model
