[package]
name = "chinese-ner"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
categories = ["text-processing"]
description = "A CRF based Chinese Named-entity Recognition Library written in Rust"
edition = "2018"
keywords = ["nlp", "chinese", "ner"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/chinese-ner-rs"

[dependencies]
crfsuite = "0.2"
jieba-rs = "0.3"
